--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
       <li>hunt</li>
       <li>duck</li>
       <li>hunt</li>
+      <li>cuty</li>
 
       <ul>
-        <li>a</li>
-        <li>b</li>
+        <li>ahmad </li>
+        <li>taranom </li>
         <ol>
           <li>b1</li>
           <li>b2</li>
@@ -48,3 +49,4 @@
 <img src="" alt="this ia a car image ">
   </body>
 </html>
+
